Update copyright year

--- a/index.html
+++ b/index.html
@@ -1,300 +1,320 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106821762-4"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-106821762-4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-    gtag('config', 'UA-106821762-4');
-  </script>
+      gtag("config", "UA-106821762-4");
+    </script>
 
-  <meta charset="utf-8">
-  <title>Peggy Van den Eynde | Vormgeving & creatie | Home</title>
-  <meta name="description" content="Peggy Van den Eynde, portfolio, vormgeving & creatie">
-  <meta name="keywords" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="author" content="https://peggyvandeneynde.github.io/">
-  <link rel="icon" type="image/png" href="img/icon.png" />
+    <meta charset="utf-8" />
+    <title>Peggy Van den Eynde | Vormgeving & creatie | Home</title>
+    <meta
+      name="description"
+      content="Peggy Van den Eynde, portfolio, vormgeving & creatie"
+    />
+    <meta name="keywords" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="https://peggyvandeneynde.github.io/" />
+    <link rel="icon" type="image/png" href="img/icon.png" />
 
-<!--Style-->
+    <!--Style-->
 
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/style-responsive.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style-responsive.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+    />
 
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+    <!--[if lt IE 9]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
 
-</head>
+  <body>
+    <!--Preloader-->
 
-<body>
-
-<!--Preloader-->
-
-<div class="preloader" id="preloader">
-    <div class="item">
-      <div class="spinner">
+    <div class="preloader" id="preloader">
+      <div class="item">
+        <div class="spinner"></div>
       </div>
     </div>
-</div>
 
-<div class="opacity-nav">
+    <div class="opacity-nav">
+      <ul class="menu-fullscreen">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Portfolio</a></li>
+        <li><a href="over-mij.html">Over mij</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
 
-    <ul class="menu-fullscreen">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="index.html">Portfolio</a></li>
-      <li><a href="over-mij.html">Over mij</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-
-</div>
-
-
-<!--Header-->
-<header id="fullscreen">
-
-    <div class="logo" id="full" style="display:none;"><a class="ajax-link" href="index.html">PEGGY VDE</a></div>
-
-      <div class="menu-index" style="display:none;" id="button">
-      <i class="fa fa-bars"></i>
+    <!--Header-->
+    <header id="fullscreen">
+      <div class="logo" id="full" style="display: none">
+        <a class="ajax-link" href="index.html">PEGGY VDE</a>
       </div>
 
-</header>
+      <div class="menu-index" style="display: none" id="button">
+        <i class="fa fa-bars"></i>
+      </div>
+    </header>
 
-
-<!--Header-->
-<header class="boxed" id="header-white">
-
-<div class="header-margin">
-
-  <div class="logo"><a class="ajax-link" href="index.html">PEGGY VAN DEN EYNDE</a></div>
-  <ul class="header-nav">
-    <li><a class="ajax-link" href="index.html">Portfolio</a>
-      <!-- <ul>
+    <!--Header-->
+    <header class="boxed" id="header-white">
+      <div class="header-margin">
+        <div class="logo">
+          <a class="ajax-link" href="index.html">PEGGY VAN DEN EYNDE</a>
+        </div>
+        <ul class="header-nav">
+          <li>
+            <a class="ajax-link" href="index.html">Portfolio</a>
+            <!-- <ul>
         <li><a class="ajax-link" href="#">Project #1</a></li>
         <li><a class="ajax-link" href="#">Project #2</a></li>
         <li><a class="ajax-link" href="#">Project #3</a></li>
 
       </ul> -->
+          </li>
 
-    </li>
+          <li><a class="ajax-link" href="over-mij.html">Over mij</a></li>
+          <li><a class="ajax-link" href="contact.html">Contact</a></li>
+        </ul>
 
-    <li><a class="ajax-link" href="over-mij.html">Over mij</a></li>
-    <li><a class="ajax-link" href="contact.html">Contact</a></li>
-  </ul>
-
-
-  <!-- <ul class="social-icon">
+        <!-- <ul class="social-icon">
     <div class="social-index">
     <li><a href="https://www.facebook.com/thomsooncom"><i class="fa fa-facebook"></i></a></li>
     <li><a href="https://www.behance.net/TomaszMazurczak"><i class="fa fa-behance"></i></a></li>
     </div>
   </ul> -->
+      </div>
+    </header>
 
-</div>
+    <div class="clear"></div>
 
-</header>
+    <!--Content-->
 
-<div class="clear"></div>
+    <div class="content" id="ajax-content">
+      <div class="text-intro" id="site-type">
+        <!-- <h1>Vormgeving & creatie</h1> -->
+        <h1 class="typewrite"><span>_ </span></h1>
+        <p>
+          Klik op onderstaande beelden voor meer details over deze projecten.
+        </p>
+      </div>
 
-  <!--Content-->
+      <!--Portfolio grid-->
 
-  <div class="content" id="ajax-content">
-
-
-        <div class="text-intro" id="site-type">
-
-          <!-- <h1>Vormgeving & creatie</h1> -->
-          <h1 class="typewrite"><span>_ </span></h1>
-          <p>Klik op onderstaande beelden voor meer details over deze projecten.</p>
-
-        </div>
-
-
-  <!--Portfolio grid-->
-
-  <ul class="portfolio-grid">
-
-
-    <li class="grid-item" data-jkit="[show:delay=300;speed=500;animation=fade]">
-      <img src="img/portfolio/artooscorp/X-ARTOOS-CoverPreview.jpg">
-        <a class="ajax-link" href="portolio_artooscorp.html">
-          <div class="grid-hover">
-            <h1>artoos group</h1>
-            <p>#corporate brochure</p>
-          </div>
-        </a>
-    </li>
-
-    <li class="grid-item" data-jkit="[show:delay=300;speed=500;animation=fade]">
-      <img src="img/portfolio/vsv/X-VSV-Bordspel-Verkeersweken-3D-DEF.jpg">
-        <a class="ajax-link" href="portolio_vsv.html">
-          <div class="grid-hover">
-            <h1>VSV</h1>
-            <p>#verpakking #spelletjes #brochures</p>
-          </div>
-        </a>
-    </li>
-
-    <li class="grid-item" data-jkit="[show:delay=300;speed=500;animation=fade]">
-      <img src="img/portfolio/logo/X-Met5aantafel.jpg">
-        <a class="ajax-link" href="portolio_logo.html">
-          <div class="grid-hover">
-            <h1>Visuele identiteit</h1>
-            <p>#logo</p>
-          </div>
-        </a>
-    </li>
-
-        <li class="grid-item" data-jkit="[show:delay=300;speed=500;animation=fade]">
-          <img src="img/portfolio/gemeenterotselaar/X-ROTSELAAR-Trots-meerdere-covers.jpg">
-            <a class="ajax-link" href="portolio_rotselaar.html">
-              <div class="grid-hover">
-                <h1>Gemeente Rotselaar</h1>
-                <p>#magazine #logo</p>
-              </div>
-            </a>
+      <ul class="portfolio-grid">
+        <li
+          class="grid-item"
+          data-jkit="[show:delay=300;speed=500;animation=fade]"
+        >
+          <img src="img/portfolio/artooscorp/X-ARTOOS-CoverPreview.jpg" />
+          <a class="ajax-link" href="portolio_artooscorp.html">
+            <div class="grid-hover">
+              <h1>artoos group</h1>
+              <p>#corporate brochure</p>
+            </div>
+          </a>
         </li>
 
-    <li class="grid-item" data-jkit="[show:delay=300;speed=500;animation=fade]">
-      <img src="img/portfolio/capac/X-CAPAC-Cover.jpg">
-        <a class="ajax-link" href="portolio_capac.html">
-          <div class="grid-hover">
-            <h1>Capac</h1>
-            <p>#personeelsmagazine</p>
-          </div>
-        </a>
-    </li>
+        <li
+          class="grid-item"
+          data-jkit="[show:delay=300;speed=500;animation=fade]"
+        >
+          <img
+            src="img/portfolio/vsv/X-VSV-Bordspel-Verkeersweken-3D-DEF.jpg"
+          />
+          <a class="ajax-link" href="portolio_vsv.html">
+            <div class="grid-hover">
+              <h1>VSV</h1>
+              <p>#verpakking #spelletjes #brochures</p>
+            </div>
+          </a>
+        </li>
 
+        <li
+          class="grid-item"
+          data-jkit="[show:delay=300;speed=500;animation=fade]"
+        >
+          <img src="img/portfolio/logo/X-Met5aantafel.jpg" />
+          <a class="ajax-link" href="portolio_logo.html">
+            <div class="grid-hover">
+              <h1>Visuele identiteit</h1>
+              <p>#logo</p>
+            </div>
+          </a>
+        </li>
 
-    <li class="grid-item" data-jkit="[show:delay=300;speed=500;animation=fade]">
-      <img src="img/portfolio/ninove/X-NINOVE---infografiek-poster.jpg">
-        <a class="ajax-link" href="portolio_ninove.html">
-          <div class="grid-hover">
-            <h1>Gemeente Ninove</h1>
-            <p>#infografiek</p>
-          </div>
-        </a>
-    </li>
+        <li
+          class="grid-item"
+          data-jkit="[show:delay=300;speed=500;animation=fade]"
+        >
+          <img
+            src="img/portfolio/gemeenterotselaar/X-ROTSELAAR-Trots-meerdere-covers.jpg"
+          />
+          <a class="ajax-link" href="portolio_rotselaar.html">
+            <div class="grid-hover">
+              <h1>Gemeente Rotselaar</h1>
+              <p>#magazine #logo</p>
+            </div>
+          </a>
+        </li>
 
-    <li class="grid-item" data-jkit="[show:delay=300;speed=500;animation=fade]">
-      <img src="img/portfolio/artooskoning/X-ARTOOS-KoningPreview.jpg">
-        <a class="ajax-link" href="portolio_artooskoning.html">
-          <div class="grid-hover">
-            <h1>artoos group</h1>
-            <p>#'one-off' magazine</p>
-          </div>
-        </a>
-    </li>
+        <li
+          class="grid-item"
+          data-jkit="[show:delay=300;speed=500;animation=fade]"
+        >
+          <img src="img/portfolio/capac/X-CAPAC-Cover.jpg" />
+          <a class="ajax-link" href="portolio_capac.html">
+            <div class="grid-hover">
+              <h1>Capac</h1>
+              <p>#personeelsmagazine</p>
+            </div>
+          </a>
+        </li>
 
+        <li
+          class="grid-item"
+          data-jkit="[show:delay=300;speed=500;animation=fade]"
+        >
+          <img src="img/portfolio/ninove/X-NINOVE---infografiek-poster.jpg" />
+          <a class="ajax-link" href="portolio_ninove.html">
+            <div class="grid-hover">
+              <h1>Gemeente Ninove</h1>
+              <p>#infografiek</p>
+            </div>
+          </a>
+        </li>
 
-    <li class="grid-item" data-jkit="[show:delay=300;speed=500;animation=fade]">
-      <img src="img/portfolio/socmut/X-SOCMUT-cover-B.jpg">
-        <a class="ajax-link" href="portolio_socmut.html">
-          <div class="grid-hover">
-            <h1>Socialistische mutualiteiten</h1>
-            <p>#magazine #infografiek</p>
-          </div>
-        </a>
-    </li>
+        <li
+          class="grid-item"
+          data-jkit="[show:delay=300;speed=500;animation=fade]"
+        >
+          <img src="img/portfolio/artooskoning/X-ARTOOS-KoningPreview.jpg" />
+          <a class="ajax-link" href="portolio_artooskoning.html">
+            <div class="grid-hover">
+              <h1>artoos group</h1>
+              <p>#'one-off' magazine</p>
+            </div>
+          </a>
+        </li>
 
-    <li class="grid-item" data-jkit="[show:delay=300;speed=500;animation=fade]">
-      <img src="img/portfolio/toerismevl/X-TOERVL-Vakantie-Cover.jpg">
-        <a class="ajax-link" href="portolio_toerismevl.html">
-          <div class="grid-hover">
-            <h1>Toerisme Vlaanderen</h1>
-            <p>#catalogi #z-card #anysurfer</p>
-          </div>
-        </a>
-    </li>
+        <li
+          class="grid-item"
+          data-jkit="[show:delay=300;speed=500;animation=fade]"
+        >
+          <img src="img/portfolio/socmut/X-SOCMUT-cover-B.jpg" />
+          <a class="ajax-link" href="portolio_socmut.html">
+            <div class="grid-hover">
+              <h1>Socialistische mutualiteiten</h1>
+              <p>#magazine #infografiek</p>
+            </div>
+          </a>
+        </li>
 
-    <li class="grid-item" data-jkit="[show:delay=300;speed=500;animation=fade]">
-      <img src="img/portfolio/viessmann/X-VIESSMAN_DM_Members.jpg">
-        <a class="ajax-link" href="portolio_viessmann.html">
-          <div class="grid-hover">
-            <h1>Viessmann</h1>
-            <p>#DM #selfmailer</p>
-          </div>
-        </a>
-    </li>
+        <li
+          class="grid-item"
+          data-jkit="[show:delay=300;speed=500;animation=fade]"
+        >
+          <img src="img/portfolio/toerismevl/X-TOERVL-Vakantie-Cover.jpg" />
+          <a class="ajax-link" href="portolio_toerismevl.html">
+            <div class="grid-hover">
+              <h1>Toerisme Vlaanderen</h1>
+              <p>#catalogi #z-card #anysurfer</p>
+            </div>
+          </a>
+        </li>
 
-    <li class="grid-item" data-jkit="[show:delay=300;speed=500;animation=fade]">
-      <img src="img/portfolio/voka/X-VOKA-Ondernemers.jpg">
-        <a class="ajax-link" href="portolio_voka.html">
-          <div class="grid-hover">
-            <h1>Voka Vlaams-Brabant</h1>
-            <p>#ledenmagazine</p>
-          </div>
-        </a>
-    </li>
+        <li
+          class="grid-item"
+          data-jkit="[show:delay=300;speed=500;animation=fade]"
+        >
+          <img src="img/portfolio/viessmann/X-VIESSMAN_DM_Members.jpg" />
+          <a class="ajax-link" href="portolio_viessmann.html">
+            <div class="grid-hover">
+              <h1>Viessmann</h1>
+              <p>#DM #selfmailer</p>
+            </div>
+          </a>
+        </li>
 
+        <li
+          class="grid-item"
+          data-jkit="[show:delay=300;speed=500;animation=fade]"
+        >
+          <img src="img/portfolio/voka/X-VOKA-Ondernemers.jpg" />
+          <a class="ajax-link" href="portolio_voka.html">
+            <div class="grid-hover">
+              <h1>Voka Vlaams-Brabant</h1>
+              <p>#ledenmagazine</p>
+            </div>
+          </a>
+        </li>
 
+        <li
+          class="grid-item"
+          data-jkit="[show:delay=300;speed=500;animation=fade]"
+        >
+          <img src="img/portfolio/belorta/X-BELORTA-Cover-stapel.jpg" />
+          <a class="ajax-link" href="portolio_belorta.html">
+            <div class="grid-hover">
+              <h1>Belorta</h1>
+              <p>#magazine</p>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
 
+    <div id="ajax-sidebar"></div>
 
+    <!--Footer-->
 
-    <li class="grid-item" data-jkit="[show:delay=300;speed=500;animation=fade]">
-      <img src="img/portfolio/belorta/X-BELORTA-Cover-stapel.jpg">
-        <a class="ajax-link" href="portolio_belorta.html">
-          <div class="grid-hover">
-            <h1>Belorta</h1>
-            <p>#magazine</p>
-          </div>
-        </a>
-    </li>
-
-  </ul>
-
-  </div>
-
-  <div id="ajax-sidebar"></div>
-
-  <!--Footer-->
-
-  <footer>
-
-    <div class="footer-margin">
-      <!-- <div class="social-footer">
+    <footer>
+      <div class="footer-margin">
+        <!-- <div class="social-footer">
         <a href="https://www.facebook.com/thomsooncom"><i class="fa fa-facebook"></i></a>
         <a href="https://www.behance.net/TomaszMazurczak"><i class="fa fa-behance"></i></a>
 
       </div> -->
-      <div class="copyright">© Copyright 2020 Peggy Van den Eynde. All Rights Reserved.</div>
+        <div class="copyright">
+          © Copyright 2021 Peggy Van den Eynde. All Rights Reserved.
+        </div>
+      </div>
+    </footer>
 
+    <!--Scripts-->
 
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/modernizr.custom.42534.js" type="text/javascript"></script>
+    <script src="js/jquery.waitforimages.js" type="text/javascript"></script>
+    <script src="js/typed.js" type="text/javascript"></script>
+    <script src="js/masonry.pkgd.min.js" type="text/javascript"></script>
+    <script src="js/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+    <script src="js/jquery.jkit.1.2.16.min.js"></script>
 
-    </div>
+    <script src="js/script.js" type="text/javascript"></script>
 
-
-  </footer>
-
-
-
-<!--Scripts-->
-
-  <script src="js/jquery.min.js"></script>
-	<script src="js/jquery.easing.min.js"></script>
-	<script src="js/modernizr.custom.42534.js" type="text/javascript"></script>
-  <script src="js/jquery.waitforimages.js" type="text/javascript"></script>
-  <script src="js/typed.js" type="text/javascript"></script>
-  <script src="js/masonry.pkgd.min.js" type="text/javascript"></script>
-  <script src="js/imagesloaded.pkgd.min.js" type="text/javascript"></script>
-  <script src="js/jquery.jkit.1.2.16.min.js"></script>
-
-  <script src="js/script.js" type="text/javascript"></script>
-
-	<script>
-    $('#button').on('click', function() {
-      $( ".opacity-nav" ).fadeToggle( "slow", "linear" );
-    // Animation complete.
-    });
-  </script>
-
-
-</body>
+    <script>
+      $("#button").on("click", function () {
+        $(".opacity-nav").fadeToggle("slow", "linear");
+        // Animation complete.
+      });
+    </script>
+  </body>
 </html>
