--- a/over-mij.html
+++ b/over-mij.html
@@ -1,216 +1,230 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106821762-4"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-106821762-4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-    gtag('config', 'UA-106821762-4');
-  </script>
+      gtag("config", "UA-106821762-4");
+    </script>
 
-  <meta charset="utf-8">
-  <title>Peggy Van den Eynde | Vormgeving & creatie | Over mij</title>
-  <meta name="description" content="Peggy Van den Eynde, portfolio, vormgeving & creatie">
-  <meta name="keywords" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="author" content="https://peggyvandeneynde.github.io/">
-  <link rel="icon" type="image/png" href="img/icon.png" />
+    <meta charset="utf-8" />
+    <title>Peggy Van den Eynde | Vormgeving & creatie | Over mij</title>
+    <meta
+      name="description"
+      content="Peggy Van den Eynde, portfolio, vormgeving & creatie"
+    />
+    <meta name="keywords" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="https://peggyvandeneynde.github.io/" />
+    <link rel="icon" type="image/png" href="img/icon.png" />
 
-<!--Style-->
+    <!--Style-->
 
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/style-responsive.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style-responsive.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+    />
 
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+    <!--[if lt IE 9]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
 
-</head>
+  <body>
+    <!--Preloader-->
 
-<body>
-
-<!--Preloader-->
-
-<div class="preloader" id="preloader">
-    <div class="item">
-      <div class="spinner">
+    <div class="preloader" id="preloader">
+      <div class="item">
+        <div class="spinner"></div>
       </div>
     </div>
-</div>
 
-<div class="opacity-nav">
+    <div class="opacity-nav">
+      <ul class="menu-fullscreen">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Portfolio</a></li>
+        <li><a href="over-mij.html">Over mij</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
 
-    <ul class="menu-fullscreen">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="index.html">Portfolio</a></li>
-      <li><a href="over-mij.html">Over mij</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-
-</div>
-
-
-<!--Header-->
-<header id="fullscreen">
-
-    <div class="logo" id="full" style="display:none;"><a class="ajax-link" href="index.html">PEGGY VDE</a></div>
-
-      <div class="menu-index" style="display:none;" id="button">
-      <i class="fa fa-bars"></i>
+    <!--Header-->
+    <header id="fullscreen">
+      <div class="logo" id="full" style="display: none">
+        <a class="ajax-link" href="index.html">PEGGY VDE</a>
       </div>
 
-</header>
+      <div class="menu-index" style="display: none" id="button">
+        <i class="fa fa-bars"></i>
+      </div>
+    </header>
 
-
-<!--Header-->
-<header class="boxed" id="header-white">
-
-<div class="header-margin">
-
-  <div class="logo"><a class="ajax-link" href="index.html">PEGGY VAN DEN EYNDE</a></div>
-  <ul class="header-nav">
-    <li><a class="ajax-link" href="index.html">Portfolio</a>
-      <!-- <ul>
+    <!--Header-->
+    <header class="boxed" id="header-white">
+      <div class="header-margin">
+        <div class="logo">
+          <a class="ajax-link" href="index.html">PEGGY VAN DEN EYNDE</a>
+        </div>
+        <ul class="header-nav">
+          <li>
+            <a class="ajax-link" href="index.html">Portfolio</a>
+            <!-- <ul>
         <li><a class="ajax-link" href="#">Project #1</a></li>
         <li><a class="ajax-link" href="#">Project #2</a></li>
         <li><a class="ajax-link" href="#">Project #3</a></li>
 
       </ul> -->
+          </li>
 
-    </li>
+          <li><a class="ajax-link" href="over-mij.html">Over mij</a></li>
+          <li><a class="ajax-link" href="contact.html">Contact</a></li>
+        </ul>
 
-    <li><a class="ajax-link" href="over-mij.html">Over mij</a></li>
-    <li><a class="ajax-link" href="contact.html">Contact</a></li>
-  </ul>
-
-
-  <!-- <ul class="social-icon">
+        <!-- <ul class="social-icon">
     <div class="social-index">
     <li><a href="https://www.facebook.com/thomsooncom"><i class="fa fa-facebook"></i></a></li>
     <li><a href="https://www.behance.net/TomaszMazurczak"><i class="fa fa-behance"></i></a></li>
     </div>
   </ul> -->
+      </div>
+    </header>
 
-</div>
+    <!--Content-->
 
-</header>
+    <div class="content" id="ajax-content">
+      <div class="text-intro">
+        <h1>Over mij</h1>
 
-  <!--Content-->
-
-  <div class="content" id="ajax-content">
-
-
-        <div class="text-intro">
-
-          <h1>Over mij</h1>
-
-          <div class="one-column">
-            <p><img style="width:100%;" src="img/overmij/Peggy_VandenEynde_portret.jpg" alt="peggy portret"></p>
-            <h2>Kerncompetenties</h2>
-            <p>Ik ben een <strong>creatief persoon</strong> en lever graag <strong>kwalitatief werk</strong> af.
-              Door zeer <strong>gestructureerd</strong> te werken kom ik snel tot een concreet resultaat.
-              Ik werk graag <strong>autonoom</strong> en voel me <strong>verantwoordelijk</strong> voor wat ik doe.
-              Omdat ik zeer <strong>gefocust</strong> ben, ervaren mijn collega’s mij als <strong>professioneel.
-              </strong> Het CC&nbsp;pakket heb ik, dankzij mijn <strong>ervaring,</strong> stevig in de vingers.
-              Ik ben zeer <strong>geduldig</strong> en <strong>blijf kalm,</strong> ook onder hoge druk.
-              Het liefst werk ik met korte <strong>communicatielijnen</strong> en in <strong>dialoog,</strong> zowel met collega’s als klanten.
-              Want <strong>samenwerken</strong> en overleggen vind ik leerrijk. Ik apprecieer het dan ook als ik <strong>feedback</strong> krijg.</p>
-              <br/><br/><br/>
-
-          </div>
-
-
-          <div class="two-column">
-            <h2>Beroepservaring</h2>
-            <p><strong>2013 tot heden — Art Director</strong> bij artoos group, Kampenhout<br/>
-            Ontwerpen van magazines, creatie van marketingmateriaal (flyers, brochures, DM’s, POS-materiaal, ...),
-            deelname aan pitches, ontwerpen van infografieken, begeleiden van shootings, opvolgen van drukwerk,
-            ontwerpen van verpakkingen.</p>
-
-            <p><strong>2010 - 2013 — Art Director</strong> bij Aveve Retail, Wilsele<br/>
-            Ontwerpen van verpakkingen en POS-materiaal, opvolgen van shootings. Ontwikkeling van commerciële
-            acties voor in de Aveve winkelpunten.</p>
-
-            <p><strong>2008 - 2009 — Art Director</strong> bij Style, Hulshout<br/>
-            Lay-outen van binnenwerk voor boeken. Opstarten van een creatieve cel binnen Style voor creatief
-            binnenwerk en covers van boeken.</p>
-
-            <p><strong>2002 - 2008 — Art Director</strong> bij Mia, Antwerpen<br/>
-            Ontwerpen en opmaken van magazines, boekcovers, binnenwerken, tijdschriften en catalogi.
-            Vormgeven van dvd inlays (films en entertainment). Ontwerpen van logo’s en huisstijlen.</p>
-
-            <hr class="dotted-line">
-
-            <p>2000 - 2001 — <strong>Art Director</strong> bij Kipling, Antwerpen<br/>
-            2000 - 2000 — <strong>Art Director</strong> (interim) bij @traction, Deurne<br/>
-            1998 - 2000 — <strong>Art Director</strong> bij Beluga, Antwerpen<br/>
-            1998 - 1998 — <strong>Designer</strong> bij Geelen & Geelen, Wespelaar<br/>
-            1997 - 1998 — <strong>Designer</strong> bij DDC, Brussel<br/>
-            1995 - 1997 — <strong>Designer</strong> bij Vintage Productions, Antwerpen<br/>
-            1994 - 1995 — <strong>DTP</strong> bij Alcimex, Leuven<br/>
-            1993 - 1994 — <strong>DTP</strong> bij ITT Promedia, Antwerpen</p>
-            <br/><br/><br/><br/>
-          </div>
-
-
+        <div class="one-column">
+          <p>
+            <img
+              style="width: 100%"
+              src="img/overmij/Peggy_VandenEynde_portret.jpg"
+              alt="peggy portret"
+            />
+          </p>
+          <h2>Kerncompetenties</h2>
+          <p>
+            Ik ben een <strong>creatief persoon</strong> en lever graag
+            <strong>kwalitatief werk</strong> af. Door zeer
+            <strong>gestructureerd</strong> te werken kom ik snel tot een
+            concreet resultaat. Ik werk graag <strong>autonoom</strong> en voel
+            me <strong>verantwoordelijk</strong> voor wat ik doe. Omdat ik zeer
+            <strong>gefocust</strong> ben, ervaren mijn collega’s mij als
+            <strong>professioneel. </strong> Het CC&nbsp;pakket heb ik, dankzij
+            mijn <strong>ervaring,</strong> stevig in de vingers. Ik ben zeer
+            <strong>geduldig</strong> en <strong>blijf kalm,</strong> ook onder
+            hoge druk. Het liefst werk ik met korte
+            <strong>communicatielijnen</strong> en in
+            <strong>dialoog,</strong> zowel met collega’s als klanten. Want
+            <strong>samenwerken</strong> en overleggen vind ik leerrijk. Ik
+            apprecieer het dan ook als ik <strong>feedback</strong> krijg.
+          </p>
+          <br /><br /><br />
         </div>
 
+        <div class="two-column">
+          <h2>Beroepservaring</h2>
+          <p>
+            <strong>2013 tot heden — Art Director</strong> bij artoos group,
+            Kampenhout<br />
+            Ontwerpen van magazines, creatie van marketingmateriaal (flyers,
+            brochures, DM’s, POS-materiaal, ...), deelname aan pitches,
+            ontwerpen van infografieken, begeleiden van shootings, opvolgen van
+            drukwerk, ontwerpen van verpakkingen.
+          </p>
 
-  </div>
+          <p>
+            <strong>2010 - 2013 — Art Director</strong> bij Aveve Retail,
+            Wilsele<br />
+            Ontwerpen van verpakkingen en POS-materiaal, opvolgen van shootings.
+            Ontwikkeling van commerciële acties voor in de Aveve winkelpunten.
+          </p>
 
+          <p>
+            <strong>2008 - 2009 — Art Director</strong> bij Style, Hulshout<br />
+            Lay-outen van binnenwerk voor boeken. Opstarten van een creatieve
+            cel binnen Style voor creatief binnenwerk en covers van boeken.
+          </p>
 
+          <p>
+            <strong>2002 - 2008 — Art Director</strong> bij Mia, Antwerpen<br />
+            Ontwerpen en opmaken van magazines, boekcovers, binnenwerken,
+            tijdschriften en catalogi. Vormgeven van dvd inlays (films en
+            entertainment). Ontwerpen van logo’s en huisstijlen.
+          </p>
 
-  <!--Home Sidebar-->
+          <hr class="dotted-line" />
 
-<div id="ajax-sidebar"></div>
+          <p>
+            2000 - 2001 — <strong>Art Director</strong> bij Kipling,
+            Antwerpen<br />
+            2000 - 2000 — <strong>Art Director</strong> (interim) bij @traction,
+            Deurne<br />
+            1998 - 2000 — <strong>Art Director</strong> bij Beluga, Antwerpen<br />
+            1998 - 1998 — <strong>Designer</strong> bij Geelen & Geelen,
+            Wespelaar<br />
+            1997 - 1998 — <strong>Designer</strong> bij DDC, Brussel<br />
+            1995 - 1997 — <strong>Designer</strong> bij Vintage Productions,
+            Antwerpen<br />
+            1994 - 1995 — <strong>DTP</strong> bij Alcimex, Leuven<br />
+            1993 - 1994 — <strong>DTP</strong> bij ITT Promedia, Antwerpen
+          </p>
+          <br /><br /><br /><br />
+        </div>
+      </div>
+    </div>
 
+    <!--Home Sidebar-->
 
-  <!--Footer-->
+    <div id="ajax-sidebar"></div>
 
-  <footer>
+    <!--Footer-->
 
-    <div class="footer-margin">
-      <!-- <div class="social-footer">
+    <footer>
+      <div class="footer-margin">
+        <!-- <div class="social-footer">
         <a href="https://www.facebook.com/thomsooncom"><i class="fa fa-facebook"></i></a>
         <a href="https://www.behance.net/TomaszMazurczak"><i class="fa fa-behance"></i></a>
 
       </div> -->
-      <div class="copyright">© Copyright 2020 Peggy Van den Eynde. All Rights Reserved.</div>
+        <div class="copyright">
+          © Copyright 2021 Peggy Van den Eynde. All Rights Reserved.
+        </div>
+      </div>
+    </footer>
 
+    <!--Scripts-->
 
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/modernizr.custom.42534.js" type="text/javascript"></script>
+    <script src="js/jquery.waitforimages.js" type="text/javascript"></script>
+    <script src="js/typed.js" type="text/javascript"></script>
+    <script src="js/masonry.pkgd.min.js" type="text/javascript"></script>
+    <script src="js/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+    <script src="js/jquery.jkit.1.2.16.min.js"></script>
 
-    </div>
+    <script src="js/script.js" type="text/javascript"></script>
 
-
-  </footer>
-
-
-<!--Scripts-->
-
-  <script src="js/jquery.min.js"></script>
-	<script src="js/jquery.easing.min.js"></script>
-	<script src="js/modernizr.custom.42534.js" type="text/javascript"></script>
-  <script src="js/jquery.waitforimages.js" type="text/javascript"></script>
-  <script src="js/typed.js" type="text/javascript"></script>
-  <script src="js/masonry.pkgd.min.js" type="text/javascript"></script>
-  <script src="js/imagesloaded.pkgd.min.js" type="text/javascript"></script>
-  <script src="js/jquery.jkit.1.2.16.min.js"></script>
-
-  <script src="js/script.js" type="text/javascript"></script>
-
-	<script>
-    $('#button, #buttons').on('click', function() {
-      $( ".opacity-nav" ).fadeToggle( "slow", "linear" );
-    // Animation complete.
-    });
-  </script>
-
-
-</body>
+    <script>
+      $("#button, #buttons").on("click", function () {
+        $(".opacity-nav").fadeToggle("slow", "linear");
+        // Animation complete.
+      });
+    </script>
+  </body>
 </html>
