--- a/portolio_socmut.html
+++ b/portolio_socmut.html
@@ -1,193 +1,195 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106821762-4"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-106821762-4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-    gtag('config', 'UA-106821762-4');
-  </script>
+      gtag("config", "UA-106821762-4");
+    </script>
 
-  <meta charset="utf-8">
-  <title>Peggy Van den Eynde | Vormgeving & creatie | Socialistische Mutualiteiten</title>
-  <meta name="description" content="Peggy Van den Eynde, portfolio, vormgeving & creatie">
-  <meta name="keywords" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="author" content="https://peggyvandeneynde.github.io/">
-  <link rel="icon" type="image/png" href="img/icon.png" />
+    <meta charset="utf-8" />
+    <title>
+      Peggy Van den Eynde | Vormgeving & creatie | Socialistische Mutualiteiten
+    </title>
+    <meta
+      name="description"
+      content="Peggy Van den Eynde, portfolio, vormgeving & creatie"
+    />
+    <meta name="keywords" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="https://peggyvandeneynde.github.io/" />
+    <link rel="icon" type="image/png" href="img/icon.png" />
 
-<!--Style-->
+    <!--Style-->
 
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/style-responsive.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style-responsive.css" />
+    <link
+      rel="stylesheet"
+      href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+    />
 
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+    <!--[if lt IE 9]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
 
-</head>
+  <body>
+    <!--Preloader-->
 
-<body>
-
-<!--Preloader-->
-
-<div class="preloader" id="preloader">
-    <div class="item">
-      <div class="spinner">
+    <div class="preloader" id="preloader">
+      <div class="item">
+        <div class="spinner"></div>
       </div>
     </div>
-</div>
 
-<div class="opacity-nav">
+    <div class="opacity-nav">
+      <ul class="menu-fullscreen">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Portfolio</a></li>
+        <li><a href="over-mij.html">Over mij</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
 
-    <ul class="menu-fullscreen">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="index.html">Portfolio</a></li>
-      <li><a href="over-mij.html">Over mij</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-
-</div>
-
-
-<!--Header-->
-<header id="fullscreen">
-
-    <div class="logo" id="full" style="display:none;"><a class="ajax-link" href="index.html">PEGGY VDE</a></div>
-
-      <div class="menu-index" style="display:none;" id="button">
-      <i class="fa fa-bars"></i>
+    <!--Header-->
+    <header id="fullscreen">
+      <div class="logo" id="full" style="display: none">
+        <a class="ajax-link" href="index.html">PEGGY VDE</a>
       </div>
 
-</header>
+      <div class="menu-index" style="display: none" id="button">
+        <i class="fa fa-bars"></i>
+      </div>
+    </header>
 
-
-<!--Header-->
-<header class="boxed" id="header-white">
-
-<div class="header-margin">
-
-  <div class="logo"><a class="ajax-link" href="index.html">PEGGY VAN DEN EYNDE</a></div>
-  <ul class="header-nav">
-    <li><a class="ajax-link" href="index.html">Portfolio</a>
-      <!-- <ul>
+    <!--Header-->
+    <header class="boxed" id="header-white">
+      <div class="header-margin">
+        <div class="logo">
+          <a class="ajax-link" href="index.html">PEGGY VAN DEN EYNDE</a>
+        </div>
+        <ul class="header-nav">
+          <li>
+            <a class="ajax-link" href="index.html">Portfolio</a>
+            <!-- <ul>
         <li><a class="ajax-link" href="#">Project #1</a></li>
         <li><a class="ajax-link" href="#">Project #2</a></li>
         <li><a class="ajax-link" href="#">Project #3</a></li>
 
       </ul> -->
+          </li>
 
-    </li>
+          <li><a class="ajax-link" href="over-mij.html">Over mij</a></li>
+          <li><a class="ajax-link" href="contact.html">Contact</a></li>
+        </ul>
 
-    <li><a class="ajax-link" href="over-mij.html">Over mij</a></li>
-    <li><a class="ajax-link" href="contact.html">Contact</a></li>
-  </ul>
-
-
-  <!-- <ul class="social-icon">
+        <!-- <ul class="social-icon">
     <div class="social-index">
     <li><a href="https://www.facebook.com/thomsooncom"><i class="fa fa-facebook"></i></a></li>
     <li><a href="https://www.behance.net/TomaszMazurczak"><i class="fa fa-behance"></i></a></li>
     </div>
   </ul> -->
+      </div>
+    </header>
 
-</div>
+    <!--Content-->
 
-</header>
+    <div class="content" id="ajax-content">
+      <div class="text-intro">
+        <h1>Socialistische Mutualiteiten</h1>
 
-  <!--Content-->
+        <div class="one-column">
+          <p>Magazine, infografiek</p>
+        </div>
 
-  <div class="content" id="ajax-content">
+        <div class="two-column">
+          <p>
+            Vormgeving van ‘dialoog’, het magazine van de Socialistische
+            Mutualiteiten voor personen met een handicap.<br />
+            Opmaak van affiches.
+          </p>
+        </div>
 
+        <div class="clear"></div>
 
-        <div class="text-intro">
+        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
-          <h1>Socialistische Mutualiteiten</h1>
+        <img
+          src="img/portfolio/socmut/1-SOCMUT-Dialoog-Cover-stapel.jpg"
+          width="100%"
+        /><br /><br /><br /><br />
+        <img
+          src="img/portfolio/socmut/2-SOCMUT-Dialoog-spread.jpg"
+          width="100%"
+        /><br /><br /><br /><br />
+        <img
+          src="img/portfolio/socmut/3-SOCMUT-Dialoog-spread.jpg"
+          width="100%"
+        /><br /><br /><br /><br />
+        <img src="img/portfolio/socmut/4-SOCMUT-Poster.jpg" width="100%" />
 
-
-	          <div class="one-column">
-	            <p>Magazine, infografiek</p>
-	          </div>
-
-
-		          <div class="two-column">
-		            <p>Vormgeving van ‘dialoog’, het magazine van de Socialistische Mutualiteiten voor personen met een handicap.<br/>
-Opmaak van affiches.</p>
-		          </div>
-
-                <div class="clear"></div>
-
-				        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
-				        <img src="img/portfolio/socmut/1-SOCMUT-Dialoog-Cover-stapel.jpg" width="100%"><br/><br/><br/><br/>
-				        <img src="img/portfolio/socmut/2-SOCMUT-Dialoog-spread.jpg" width="100%"><br/><br/><br/><br/>
-				        <img src="img/portfolio/socmut/3-SOCMUT-Dialoog-spread.jpg" width="100%"><br/><br/><br/><br/>
-                <img src="img/portfolio/socmut/4-SOCMUT-Poster.jpg" width="100%">
-
-					        <div class="prev-next">
-
-					          <div class="prev-button"><a class="ajax-link" href="portolio_artooskoning.html">Previous work</a></div>
-					          <div class="next-button"><a class="ajax-link" href="portolio_toerismevl.html">Next work</a></div>
-
-					        </div>
-            </div>
-
+        <div class="prev-next">
+          <div class="prev-button">
+            <a class="ajax-link" href="portolio_artooskoning.html"
+              >Previous work</a
+            >
+          </div>
+          <div class="next-button">
+            <a class="ajax-link" href="portolio_toerismevl.html">Next work</a>
+          </div>
+        </div>
+      </div>
     </div>
 
+    <!--Home Sidebar-->
 
+    <div id="ajax-sidebar"></div>
 
-  <!--Home Sidebar-->
+    <!--Footer-->
 
-<div id="ajax-sidebar"></div>
-
-
-  <!--Footer-->
-
-  <footer>
-
-    <div class="footer-margin">
-      <!-- <div class="social-footer">
+    <footer>
+      <div class="footer-margin">
+        <!-- <div class="social-footer">
         <a href="https://www.facebook.com/thomsooncom"><i class="fa fa-facebook"></i></a>
         <a href="https://www.behance.net/TomaszMazurczak"><i class="fa fa-behance"></i></a>
 
       </div> -->
-      <div class="copyright">© Copyright 2020 Peggy Van den Eynde. All Rights Reserved.</div>
+        <div class="copyright">
+          © Copyright 2021 Peggy Van den Eynde. All Rights Reserved.
+        </div>
+      </div>
+    </footer>
 
+    <!--Scripts-->
 
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/modernizr.custom.42534.js" type="text/javascript"></script>
+    <script src="js/jquery.waitforimages.js" type="text/javascript"></script>
+    <script src="js/typed.js" type="text/javascript"></script>
+    <script src="js/masonry.pkgd.min.js" type="text/javascript"></script>
+    <script src="js/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+    <script src="js/jquery.jkit.1.2.16.min.js"></script>
 
-    </div>
+    <script src="js/script.js" type="text/javascript"></script>
 
-
-  </footer>
-
-
-
-<!--Scripts-->
-
-  <script src="js/jquery.min.js"></script>
-	<script src="js/jquery.easing.min.js"></script>
-	<script src="js/modernizr.custom.42534.js" type="text/javascript"></script>
-  <script src="js/jquery.waitforimages.js" type="text/javascript"></script>
-  <script src="js/typed.js" type="text/javascript"></script>
-  <script src="js/masonry.pkgd.min.js" type="text/javascript"></script>
-  <script src="js/imagesloaded.pkgd.min.js" type="text/javascript"></script>
-  <script src="js/jquery.jkit.1.2.16.min.js"></script>
-
-  <script src="js/script.js" type="text/javascript"></script>
-
-	<script>
-    $('#button, #buttons').on('click', function() {
-      $( ".opacity-nav" ).fadeToggle( "slow", "linear" );
-    // Animation complete.
-    });
-  </script>
-
-
-</body>
+    <script>
+      $("#button, #buttons").on("click", function () {
+        $(".opacity-nav").fadeToggle("slow", "linear");
+        // Animation complete.
+      });
+    </script>
+  </body>
 </html>
