--- a/over-mij.html
+++ b/over-mij.html
@@ -139,7 +139,14 @@
         <div class="two-column">
           <h2>Beroepservaring</h2>
           <p>
-            <strong>2013 tot heden — Art Director</strong> bij artoos group,
+            <strong>2021 tot heden — leerkracht Grafische Technieken</strong> bij Heilig-Grafinstituut,
+            Turnhout<br />
+            Opstarten nieuwe richting Grafische Technieken (DA). Cursusmateriaal ontwikkelen en lesgeven in de 
+            vakken: Multimedia, Grafische ontwerp, Typografie en Kunst & Cultuur voor leerlingen van de 2e graad. Lesgeven aan leerlingen van de 3e graad in de A-finaliteit richting Publiciteit.
+          </p>
+
+          <p>
+            <strong>2013 tot 2021 — Art Director</strong> bij artoos group,
             Kampenhout<br />
             Ontwerpen van magazines, creatie van marketingmateriaal (flyers,
             brochures, DM’s, POS-materiaal, ...), deelname aan pitches,
@@ -202,7 +209,7 @@
 
       </div> -->
         <div class="copyright">
-          © Copyright 2021 Peggy Van den Eynde. All Rights Reserved.
+          © Copyright 2024 Peggy Van den Eynde. All Rights Reserved.
         </div>
       </div>
     </footer>
